fix: styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
   width: 100%;
+  min-height: 100vh;
   padding: 1rem 0;
   display: flex;
   flex-direction: column;
